--- a/ripiu/cmsplugin_filer_svg/templates/ripiu/cmsplugin_filer_svg/ref.html
+++ b/ripiu/cmsplugin_filer_svg/templates/ripiu/cmsplugin_filer_svg/ref.html
@@ -1,9 +1,17 @@
 {% spaceless %}
   {% if instance.file %}
+    {% if picture_link %}
+        <a href="{{ picture_link }}"
+        {% if instance.link_target %} target="{{ instance.link_target }}"{% endif %}
+        {{ instance.link_attributes_str }}>
+    {% endif %}
     <img src="{{ instance.file.url }}"
-         alt="{% if instance.alt %}{{ instance.alt }}{% endif %}"
+         alt="{% if instance.alt_text %}{{ instance.alt_text }}{% endif %}"
          class="svg"
          {% if instance.width %}width="{{ instance.width }}"{% endif %}
          {% if instance.height %}height="{{ instance.height }}"{% endif %}>
+    {% if picture_link %}
+        </a>
+    {% endif %}
   {% endif %}
 {% endspaceless %}
